--- a/.editorconfig
+++ b/.editorconfig
@@ -9,4 +9,4 @@ indent_size = 2
 tab_width = 2
 insert_final_newline = true
 trim_trailing_whitespace = false
-max_line_length = 100
+max_line_length = off
