Implementing configuration for environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
-#Enviroments PostgresSQL
+# Configurar na raiz do projeto os arquivos:
+# .env.profie.dev
+# .env.profie.prod
+# com o conteúdo das variáveis de ambiente baixo para os ambiente de
+# produção e desenvolvimento
+
+BD_HOST=
+BD_PORT=
 BD_USERNAME=
 BD_PASSWORD=
 BD_DATABASE=
-
-#Enviroments JWT
 JWT_SECRET=
