Adding Swagger Open API

--- a/.env.profile.dev
+++ b/.env.profile.dev
@@ -1,6 +1,6 @@
-BD_HOST=localhost
-BD_PORT=5432
-BD_USERNAME=postgres
-BD_PASSWORD=postgres
-BD_DATABASE=task-management
-JWT_SECRET=Dh7npG\~?pybW4;yYr\B7&n2+{WVnqmLjY6kA~/>RG?hmC,TV+=arcb]wf-{+>N3
+BD_HOST=
+BD_PORT=
+BD_USERNAME=
+BD_PASSWORD=
+BD_DATABASE=
+JWT_SECRET=
